# skylark-router

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml.example  docker-compose.yml  start.sh
.github/workflows/: ci.yml  release.yml
backend/: go.mod  go.sum  main.go
backend/config/: config.go
backend/database/: database.go  migrations.go  seed.go
backend/handlers/: apikey.go  chat.go  config.go  model.go  provider.go  requestlog.go  search.go  stats.go  user.go  version.go
backend/middleware/: auth.go  ratelimit.go
backend/models/: models.go
backend/proxy/: proxy.go  types.go
backend/router/: router.go
backend/version/: version.go
docs/: api-reference.md  chat-ui.md  configuration.md  desktop-app.md  getting-started.md  integrations.md  routing.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  theme.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/api/: client.ts
frontend/src/components/: APIKeyList.tsx  Chat.tsx  DocsPage.tsx  Layout.tsx  MessageContent.tsx  ModelForm.tsx  ModelList.tsx  Playground.tsx  ProviderForm.tsx  ProviderList.tsx  RequestLogs.tsx  SettingsPage.tsx  SetupWizard.tsx  UsageStats.tsx
frontend/src/components/ui/: Toast.tsx  (+4 more)
frontend/src/i18n/: de.ts  en.ts  es.ts  fr.ts  index.tsx  ja.ts  ko.ts  zh.ts
frontend/src/types/: index.ts
frontend/src/utils/: attachmentDB.ts
